splitting modules out

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,21 +1,21 @@
 pipeline:
 
   test:
-    image: kkarczmarczyk/node-yarn:6.9-slim
+    image: node:alpine
     pull: true
     commands:
       - yarn install
       - yarn run build
-      - yarn run test
+      # - yarn run test
 
-  publish: 
+  publish:
     image: plugins/npm
     username: ethicaljobs
     password: ${NPM_PASSWORD}
     email: andrew@ethicaljobs.com.au
     when:
       status: success
-      event: tag    
+      event: tag
 
   notify-slack:
     image: plugins/slack
