--- a/.drone.yml
+++ b/.drone.yml
@@ -11,7 +11,10 @@ pipeline:
   publish:
     image: plugins/npm
     username: ethicaljobs
-    password: ${NPM_PASSWORD}
+    # refactor this back to a secret when the bug in drone `7.1` is addressed
+    # Also change the password...
+    password: Aarm4662
+    # refactor this back to a secret when the bug in drone `7.1` is addressed
     email: andrew@ethicaljobs.com.au
     when:
       status: success
@@ -23,3 +26,4 @@ pipeline:
     channel: deployments
     when:
       status: changed
+
