--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ethical-jobs-redux-modules",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "author": "Andrew McLagan",
   "description": "EthicalJobs.com.au redux modules",
   "license": "MIT",
@@ -21,7 +21,7 @@
     "globby": "^6.1.0",
     "gulp": "^3.9.1",
     "gulp-watch": "^4.3.11",
-    "jest": "^19.0.2",
+    "jest": "^23.1.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
@@ -32,10 +32,10 @@
     "xo": "^0.18.1"
   },
   "dependencies": {
-    "ethical-jobs-redux": "^0.2.34",
-    "ethical-jobs-sdk": "0.3.*",
-    "immutable": "4.0.0-rc.2",
-    "reselect": "^3.0.0"
+    "ethical-jobs-redux": "^1.0.0",
+    "ethical-jobs-sdk": "^1.1.0",
+    "immutable": "4.0.0-rc.9",
+    "reselect": "^3.0.1"
   },
   "repository": {
     "type": "git",
