--- a/package.json
+++ b/package.json
@@ -1,50 +1,50 @@
 {
   "name": "ethical-jobs-redux-modules",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "author": "Andrew McLagan",
   "description": "EthicalJobs.com.au redux modules",
   "license": "MIT",
   "scripts": {
-    "build": "rimraf lib/* && NODE_ENV=production gulp build",
-    "dev": "rimraf lib/* && NODE_ENV=development gulp build:watch",
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
     "test": "jest",
     "test-watch": "jest --watch"
   },
-  "main": "lib/umd/index.js",
-  "module": "lib/es/index.js",
+  "main": "dist/ethical-jobs-redux-modules.cjs.js",
+  "module": "dist/ethical-jobs-redux-modules.esm.js",
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
-    "babel-jest": "^19.0.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babelrc-rollup": "^3.0.0",
-    "core.js": "^0.4.2",
-    "globby": "^6.1.0",
-    "gulp": "^3.9.1",
-    "gulp-watch": "^4.3.11",
+    "babel-jest": "^23.0.1",
+    "babel-preset-env": "^1.7.0",
+    "ethical-jobs-sdk": "^1.0.0",
+    "immutable": "^4.0.0-rc.2",
     "jest": "^23.1.0",
-    "rimraf": "^2.6.1",
-    "rollup": "^0.41.6",
-    "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup": "^0.60.1",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-json": "^3.0.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
     "sinon": "^2.1.0",
-    "unfetch": "^2.1.2",
-    "xo": "^0.18.1"
+    "unfetch": "^3.0.0"
   },
   "dependencies": {
-    "ethical-jobs-redux": "^1.0.0",
-    "ethical-jobs-sdk": "^1.1.0",
-    "immutable": "4.0.0-rc.9",
-    "reselect": "^3.0.1"
+    "ethical-jobs-redux": "^1.0.0"
+  },
+  "peerDependencies": {
+    "ethical-jobs-sdk": "^1.0.0",
+    "immutable": "^3.0.0 || ^4.0.0-rc.2",
+    "redux": "^2.0.0 || ^3.0.0 || ^4.0.0 || ^5.0.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ethical-jobs/ethical-jobs-redux.git"
+    "url": "https://github.com/ethical-jobs/ethical-jobs-redux-modules.git"
   },
   "bugs": {
-    "url": "https://github.com/ethical-jobs/ethical-jobs-redux/issues"
+    "url": "https://github.com/ethical-jobs/ethical-jobs-redux-modules/issues"
   },
-  "homepage": "https://github.com/ethical-jobs/ethical-jobs-redux",
+  "homepage": "https://github.com/ethical-jobs/ethical-jobs-redux-modules",
   "keywords": [
     "ethicaljobs",
     "employment",
@@ -52,9 +52,6 @@
     "humanitarian",
     "redux"
   ],
-  "xo": {
-    "parser": "babel-eslint"
-  },
   "jest": {
     "testPathIgnorePatterns": [
       "/__tests__/_fixtures.js"
