- Adding ordered enumerable selector - Migrating to ethical-jobs npm organisation

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ethical-jobs-redux-modules",
-  "version": "2.1.0",
+  "name": "@ethical-jobs/redux-modules",
+  "version": "2.2.0",
   "author": "Andrew McLagan",
   "description": "EthicalJobs.com.au redux modules",
   "license": "MIT",
