--- a/.drone.yml
+++ b/.drone.yml
@@ -10,8 +10,13 @@ pipeline:
 
   publish:
     image: plugins/npm
-    secrets: [ npm_username, npm_password ]
-    email: dean@ethicaljobs.com.au
+#    secrets: [ npm_username, npm_password ]
+    settings:
+      username:
+        from_secret: npm_username
+      password:
+        from_secret: npm_password
+      email: dean@ethicaljobs.com.au
     when:
       status: success
       event: tag
