--- a/.drone.yml
+++ b/.drone.yml
@@ -10,7 +10,7 @@ pipeline:
 
   publish:
     image: plugins/npm
-#    secrets: [ npm_username, npm_password ]
+    secrets: [ npm_username, npm_password ]
     settings:
       username:
         from_secret: npm_username
