Updated drone yml to be syntactically correct.

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,7 @@
-pipeline:
-
-  test:
+kind: pipeline
+name: default
+steps:
+  - name: test
     image: node:8-alpine
     pull: true
     commands:
@@ -8,9 +9,8 @@ pipeline:
       - yarn run build
       - yarn run test
 
-  publish:
+  - name: publish
     image: plugins/npm
-    secrets: [ npm_username, npm_password ]
     settings:
       username:
         from_secret: npm_username
@@ -21,7 +21,9 @@ pipeline:
       status: success
       event: tag
 
-#  notify-slack:
-#    image: plugins/slack
-#    webhook: https://hooks.slack.com/services/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
-#    channel: deployments
+  - name: notify-slack
+    image: plugins/slack
+    settings:
+      webhook:
+        from_secret: slack_webhook
+      channel: deployments
